--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
         "axios": "^0.27.2",
         "classnames": "^2.3.1",
         "normalize.css": "^8.0.1",
+        "react-redux": "^8.1.1",
+        "@reduxjs/toolkit": "^1.9.5",
         "react": "^18.1.0",
         "react-dom": "^18.1.0",
         "react-router-dom": "^6.3.0",
