--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@fortawesome/free-regular-svg-icons": "^6.0.0",
         "@fortawesome/free-solid-svg-icons": "^6.0.0",
         "@fortawesome/react-fontawesome": "^0.1.17",
+        "@reduxjs/toolkit": "^1.9.5",
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.1.1",
         "@testing-library/user-event": "^13.5.0",
@@ -15,11 +16,11 @@
         "antd": "^5.9.0",
         "axios": "^0.27.2",
         "classnames": "^2.3.1",
+        "google-spreadsheet": "^4.1.1",
         "normalize.css": "^8.0.1",
-        "react-redux": "^8.1.1",
-        "@reduxjs/toolkit": "^1.9.5",
         "react": "^18.1.0",
         "react-dom": "^18.1.0",
+        "react-redux": "^8.1.1",
         "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.1",
         "web-vitals": "^2.1.4"
